--- a/Moview_review_analysis.ipynb
+++ b/Moview_review_analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Moview_review_analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOIqvZtcAUDW+oZEA/bb6DO",
+      "authorship_tag": "ABX9TyOzt+1fZxs0XfcVNAqxn8Zu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2765,10 +2765,35 @@
         "colab": {}
       },
       "source": [
-        "new_model = tf.keras.models.load_model('/content/saved_model/my_model')"
+        "  new_model = tf.keras.models.load_model('/content/saved_model/my_model')"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zTsGisDSecZf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b48bd529-33cd-498f-85ef-72f377136cfb"
+      },
+      "source": [
+        "!ls /content/saved_model/my_model/variables"
+      ],
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "variables.data-00000-of-00002  variables.data-00001-of-00002  variables.index\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2858,9 +2883,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 88
+          "height": 34
         },
-        "outputId": "d35fd512-cf09-4e69-8c99-1358d33ef216"
+        "outputId": "992ccc72-b1d8-4caf-9bc6-f2c872b5b814"
       },
       "source": [
         "# predict on a sample text with padding\n",
@@ -2870,22 +2895,8 @@
         "predictions = sample_predict(sample_pred_text, pad=True)\n",
         "print(predictions)"
       ],
-      "execution_count": 91,
+      "execution_count": 96,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:7 out of the last 11 calls to <function Model.make_predict_function.<locals>.predict_function at 0x7fe09dac72f0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:7 out of the last 11 calls to <function Model.make_predict_function.<locals>.predict_function at 0x7fe09dac72f0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
-          ],
-          "name": "stderr"
-        },
         {
           "output_type": "stream",
           "text": [
@@ -2899,6 +2910,35 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZKF30DptIYOt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5e95db55-32bf-4a9f-f01a-c7d05fed1ea4"
+      },
+      "source": [
+        "# predict on a sample text with padding\n",
+        "\n",
+        "sample_pred_text = ('very bad story its going to be disaster in this year please dont watch this movie')\n",
+        "predictions = sample_predict(sample_pred_text, pad=True)\n",
+        "print(predictions)"
+      ],
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[-3.943018]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CGSXfJOtfOYt",
         "colab_type": "code",
         "colab": {}
       },
